--- a/index.html
+++ b/index.html
@@ -279,7 +279,80 @@
       prices: {
         title: "Prices",
         image: "",
-        content: "<p>Check out our pricing for games, shoe rentals, and special offers.</p>"
+        content: `
+          <style>
+            .price-section {
+              margin-bottom: 2rem;
+            }
+
+            .price-section h3 {
+              margin-bottom: 0.5rem;
+              color: #4A90E2;
+            }
+
+            .price-table {
+               width: 100%;
+               border-collapse: collapse;
+               margin-bottom: 1rem;
+            }
+
+            .price-table th,
+            .price-table td {
+              border: 1px solid #ccc;
+              padding: 0.75rem;
+              text-align: left;
+            }
+
+            .price-table th {
+              background-color: #f0f0f0;
+              color: #333;
+            }
+
+            .price-note {
+              font-style: italic;
+              color: #666;
+            }
+          </style>
+
+          <div class="price-section">
+            <h3>General Pricing</h3>
+            <table class="price-table">
+              <tr><th>Day</th><th>Time</th><th>Price</th></tr>
+              <tr><td>Monday – Thursday</td><td>Open – 5pm</td><td>$4.00 per game</td></tr>
+              <tr><td>Monday – Thursday</td><td>5pm – Close</td><td>$4.50 per game</td></tr>
+              <tr><td>Friday & Saturday</td><td>Open – 8pm</td><td>$4.50 per game</td></tr>
+              <tr><td>Friday & Saturday</td><td>8pm – Close</td><td>$4.75 per game</td></tr>
+              <tr><td>Sunday</td><td>All Day</td><td>$4.50 per game</td></tr>
+            </table>
+          </div>
+
+          <div class="price-section">
+            <h3>Shoe Rental</h3>
+            <table class="price-table">
+              <tr><th>Type</th><th>Price</th></tr>
+              <tr><td>Standard Rental</td><td>$3.50</td></tr>
+              <tr><td>League Members</td><td>$2.00</td></tr>
+            </table>
+          </div>
+
+          <div class="price-section">
+            <h3>Seniors (Mon – Thu, Open – 5pm)</h3>
+            <table class="price-table">
+              <tr><th>Rate</th></tr>
+              <tr><td>$2.50 per game</td></tr>
+            </table>
+          </div>
+
+          <div class="price-section">
+            <h3>USBC Sanctioned Bowlers (Mon – Thu, Open – 5pm)</h3>
+            <table class="price-table">
+              <tr><th>Rate</th></tr>
+              <tr><td>$3.00 per game</td></tr>
+            </table>
+          </div>
+
+          <p class="price-note">* Prices may vary during holidays or special events. Call ahead for group rates and availability.</p>
+        `
       },
       leagues: {
         title: "Leagues",
