--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         </div>
 
         <div class="deals-section">
-          <div class="deals-header">🎟️ Printable Coupons</div>
+          <div class="deals-header">🎟️ Printable Coupons (All discounds after checkout)</div>
           <div class="coupon-list">
             <div class="coupon">
              <h4>🎳 $5 Off Any Weekend Game</h4>
@@ -680,8 +680,9 @@
               <ul class="menu-items">
                <li>StrikeZone Burger 15$</li>
                <li>Grilled Chicken Sandwich 12$</li>
-               <li>BBQ Rib Platter 18$</li>
-               <li>Veggie Bowl 9$</li>
+               <li>Tacos 18 (6 each)$</li>
+               <li>Large PizzaS 16$</li>
+               <li>Hot Dog 5$</li>
              </ul>
             </div>
 
@@ -689,10 +690,12 @@
               <h3>Drinks</h3>
               <img class="menu-photo" src="https://e7.pngegg.com/pngimages/642/549/png-clipart-beer-pitcher-cocktail-carib-stag-jug-beer-glass-pint-glass.png" alt="Drinks">
               <ul class="menu-items">
-                <li>Craft Beer Pitchers 12$</li>
+                <li>Craft Beer Pitchers 16$</li>
                <li>Classic Milkshakes 8$</li>
                <li>Soft Drinks & Sodas 4$</li>
                <li>Margaritas & Mixed Drinks 9$</li>
+               <li>Any Domestic 5$</li>
+               <li>Any well shot 5$</li>
               </ul>
            </div>
          </div>
